refactor: 优化 AimAssist 模块逻辑和代码结构